# email-triage-openenv

./: .env.example  .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
scripts/: validate-submission.sh
server/: app.py
src/: dataset.py  env.py  graders.py  models.py  rewards.py  score_utils.py  tasks.py  visualization.py
