[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-env"
version = "1.0.0"
description = "OpenEnv-compatible Email Triage environment with deterministic grading"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7.0,<3.0.0",
  "openai>=1.35.0,<2.0.0",
  "PyYAML>=6.0.1,<7.0.0",
  "matplotlib>=3.8.0,<4.0.0",
  "openenv-core>=0.1.0",
  "requests>=2.32.0,<3.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn>=0.32.0,<1.0.0",
]

[project.scripts]
server = "server.app:main"
